// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`javascript should apply migration TypeScript 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "last 2 Chrome versions",
                        "not Chrome < 60",
                        "last 2 Safari versions",
                        "not Safari < 10.1",
                        "last 2 iOS versions",
                        "not iOS < 10.3",
                        "last 2 Firefox versions",
                        "not Firefox < 54",
                        "last 2 Edge versions",
                        "not Edge < 15",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "last 2 Chrome versions",
                        "not Chrome < 60",
                        "last 2 Safari versions",
                        "not Safari < 10.1",
                        "last 2 iOS versions",
                        "not iOS < 10.3",
                        "last 2 Firefox versions",
                        "not Firefox < 54",
                        "last 2 Edge versions",
                        "not Edge < 15",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`javascript should apply strict TypeScript 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "last 2 Chrome versions",
                        "not Chrome < 60",
                        "last 2 Safari versions",
                        "not Safari < 10.1",
                        "last 2 iOS versions",
                        "not iOS < 10.3",
                        "last 2 Firefox versions",
                        "not Firefox < 54",
                        "last 2 Edge versions",
                        "not Edge < 15",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "ts-loader",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\strict.tsconfig.json",
            },
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for current node in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "node": "current",
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for legacy browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": true,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": "entry",
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for legacy browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": "entry",
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for modern browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": true,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "last 2 Chrome versions",
                        "not Chrome < 60",
                        "last 2 Safari versions",
                        "not Safari < 10.1",
                        "last 2 iOS versions",
                        "not iOS < 10.3",
                        "last 2 Firefox versions",
                        "not Firefox < 54",
                        "last 2 Edge versions",
                        "not Edge < 15",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for modern browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "worker-loader",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "last 2 Chrome versions",
                        "not Chrome < 60",
                        "last 2 Safari versions",
                        "not Safari < 10.1",
                        "last 2 iOS versions",
                        "not iOS < 10.3",
                        "last 2 Firefox versions",
                        "not Firefox < 54",
                        "last 2 Edge versions",
                        "not Edge < 15",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "eslint-loader",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;
